# events

./: .clang-format  .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt
benchmark/source/: main.cpp
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
examples/: CMakeLists.txt  async_event_dispatcher.cpp  event_dispatcher.cpp  signal_handler.cpp  synchronized_event_dispatcher.cpp
include/events/: connection.hpp
include/events/detail/: async_concurrent_signal_handler.hpp  async_drop_signal_handler.hpp  parallel_group.hpp  parallel_publish.hpp  void_parallel_group.hpp
include/events/dispatcher/: async_event_dispatcher.hpp  event_dispatcher.hpp  synchronized_event_dispatcher.hpp
include/events/signal_handler/: async_signal_handler.hpp  callback_policy.hpp  signal_handler.hpp  synchronized_signal_handler.hpp
test/: CMakeLists.txt
test/source/: main.cpp  test_connection.cpp  test_event_dispatcher.cpp  test_signal_handler.cpp  test_synchronized_event_dispatcher.cpp  test_synchronized_signal_handler.cpp
